Sonar Qube fixes